Fix overflow on mobile

--- a/frontend/web/less/mobile/post.less
+++ b/frontend/web/less/mobile/post.less
@@ -193,6 +193,7 @@
 }
 #list_post{
     overflow-y: auto;
+    overflow-x: hidden;
     .header{
         background: #5888ac;
         width: 100%;
