--- a/frontend/web/less/mobile/topic.less
+++ b/frontend/web/less/mobile/topic.less
@@ -2,7 +2,8 @@
     display: none;
 }
 #show-topic{
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     .header{
         background: #5888ac;
         width: 100%;
